# ECC_Pretest

./: ECC_test.tar  Makefile  README.md  file_t_sha256.cpp  md5.txt  md5.txt.num  md5.txt.txt  raidmeter_f.cpp  raidmeter_f_ecc.cpp  sha256  sha256.c  sha256.txt  sha256.txt.num  sha256.txt.txt
pre_ecc_test/: CMakeCache.txt  CMakeLists.txt  Makefile  astl@59.77.17.9  cmake_install.cmake  main.cpp  pre_ecc_test  pre_ecc_test.cbp
pre_ecc_test/include/: com_t.h  hash.h  md5.h
pre_ecc_test/sourcefile/: com_t.cpp  hash.cpp  md5.c
pre_ecc_test/test_result/: test_ecc.result.1  test_ecc.result.sha256
